--- a/themes/socialasset/b_ngo-profile-02-campaings.html
+++ b/themes/socialasset/b_ngo-profile-02-campaings.html
@@ -147,9 +147,9 @@
             <div class="ngo-profile-sec-iner width-1115">
               <div class="user-profile-sec-tab">
                 <div class="fl-tabs clearfix">
-                  <button onclick="window.location.href = 'b_ngo-01-profile.html';"  class="tab-link"><span>MY NGO’S PROFILE</span></button>
-                  <button onclick="window.location.href = 'b_ngo-02-profile-campaings.html';"  class="tab-link current"><span>MY CAMPAIGNS</span></button>
-                  <button onclick="window.location.href = 'b_ngo-03-profile-create-campaing.html';"  class="tab-link"><span>CREATE A CAMPAIGN</span></button>
+                  <button onclick="window.location.href = 'b_ngo-profile-01-my-account.html';"  class="tab-link current"><span>MY NGO’S PROFILE</span></button>
+                  <button onclick="window.location.href = 'b_ngo-profile-02-campaings.html';"  class="tab-link"><span>MY CAMPAIGNS</span></button>
+                  <button onclick="window.location.href = 'b_ngo-profile-03-create-campaing.html';"  class="tab-link"><span>CREATE A CAMPAIGN</span></button>
                 </div>
               </div>
               <div id="tab-2" class="">
