--- a/themes/socialasset/home.html
+++ b/themes/socialasset/home.html
@@ -351,6 +351,7 @@
 
 
 <section class="sa-campaigns-grid-section">
+  <div class="sa-campaigns-grd-top-bg-sec" style="background: url('assets/images/sa-campaigns-grd-top-bg.png');"></div>
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
@@ -514,7 +515,7 @@
         <div class="sa-companies-sec-inner">
           <h4>Companies that use Social Assets</h4>
           <div class="sa-company-name">
-            <ul class="ulc">
+            <ul class="ulc sa-company-name-slide">
               <li><a href="#"><img src="assets/images/sa-nokia.png"></a></li>
               <li><a href="#"><img src="assets/images/sa-cocacola.png"></a></li>
               <li><a href="#"><img src="assets/images/sa-accenture.png"></a></li>
